Fix movie posters in add view on mobile

--- a/static/css/add_movie.css
+++ b/static/css/add_movie.css
@@ -28,25 +28,25 @@ ul#movies li {
     text-align: center;
 }
 
-ul#movie_list li {
+ul#movies li {
     width: calc(20% - 15px);
     margin: 1em 0.5em 0;
     text-align: center;
 }
 
 @media (max-width: 820px) {
-    ul#movie_list li {
+    ul#movies li {
         width: calc(25% - 15px);
     }
 }
 
 @media (max-width: 560px) {
-    ul#movie_list li {
+    ul#movies li {
         width: calc(50% - 15px);
     }
 }
 
-ul#movie_list {
+ul#movies {
     max-width: 960px;
 }
 
